Updates in UI and claims controller